--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -97,6 +97,7 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
+  z-index: 1000;
 }
 
 .top a {
@@ -112,7 +113,7 @@ body {
 
 header p {
   position: absolute;
-  top: 5%;
+  top: 10%;
   left: 5%;
   font-weight: 600;
   font-size: 25px;
