--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -86,6 +86,7 @@ body {
     display: flex;
     gap: 45px;
     @include center(vertical);
+    z-index: 1000;
 }
 
 .top a {
@@ -100,7 +101,7 @@ body {
 
 header p {
     position: absolute;
-    top: 5%;
+    top: 10%;
     left: 5%;
     font-weight: 600;
     font-size: 25px;
