--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -32,6 +32,17 @@ html {
   text-decoration: none !important;
 }
 
+@media screen and (max-width: 768px) {
+  .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+  }
+}
 .top {
   position: absolute;
   right: 2.5%;
@@ -146,6 +157,17 @@ h1 {
   text-decoration: none !important;
 }
 
+@media screen and (max-width: 768px) {
+  .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+  }
+}
 .final {
   padding-left: 5%;
   padding-right: 5%;
