--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -21,6 +21,17 @@
   text-decoration: none !important;
 }
 
+@media screen and (max-width: 768px) {
+  .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+  }
+}
 * {
   font-family: "Inter", sans-serif;
   padding: 0;
