--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -32,6 +32,17 @@ html {
   text-decoration: none !important;
 }
 
+@media screen and (max-width: 768px) {
+  .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+  }
+}
 h1 {
   display: flex;
   justify-content: center;
