--- a/scss/partials/_links.scss
+++ b/scss/partials/_links.scss
@@ -31,3 +31,18 @@
     display: inline-block;
     margin: auto;
 }
+
+
+@media screen and (max-width: 768px) {
+
+  .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
+}
+
+}
