--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -772,7 +772,8 @@ footer {
     font-size: 1.5rem;
   }
   .tool-grid {
-    margin-right: 18%;
+    margin-right: 20%;
+    gap: 40px;
   }
   .tool-card img {
     width: 100%;
